# grapl-os-user-plugin

./: .gitignore
grapl-os-user-generator-plugin/: Cargo.toml
grapl-os-user-generator-plugin/src/: auid.rs  auid_assumption.rs  lib.rs  user_id.rs  user_id_assumption.rs
grapl_os_user_analyzer_plugin/: assumed_auid_node.py  assumed_user_id_node.py  auid_node.py  setup.py  test.py  user_id_node.py
grapl_os_user_analyzer_plugin/grapl_os_analyzer_plugin/: assumed_auid_node.py  assumed_user_id_node.py
