[package]
name = "grapl-os-user-generator-plugin"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"
description = "A plugin for Grapl, providing operating system user constructs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grapl-graph-descriptions = "0.1.8"
derive-dynamic-node = "0.1.6"

uuid = { version = "0.7", features = ["serde", "v4"] }